--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="css/index.css">
   <meta charset="utf-8">
   <!--
   Customize this policy to fit your own app's needs. For more guidance, please refer to the docs:
