--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/login.css">
   <meta charset="utf-8">
   <!--
   Customize this policy to fit your own app's needs. For more guidance, please refer to the docs:
