--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="src/css/index.css">
+    <link rel="stylesheet" href="src/css/login.css">
+    <link rel="stylesheet" href="src/css/remixicons/remixicon.css">
   <meta charset="utf-8">
   <!--
   Customize this policy to fit your own app's needs. For more guidance, please refer to the docs:
