--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/login.css">
   <link rel="stylesheet" href="css/remixicons/remixicon.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
   <meta charset="utf-8">
   <!--
   Customize this policy to fit your own app's needs. For more guidance, please refer to the docs:
